<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">51信用卡管家</string>
    <string name="ok">确定</string>
    <string name="no_sdcard">您手机没有检测到SD卡，不能使用此功能！</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="youhui_app_name">111_混合_优惠</string>
    <string name="qqauth">QQ登录</string>
    <string name="strInputAccHint">输入账号</string>
    <string name="strAccInputLabel">账号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="please_input_name">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="network_error">网络连接错误，请稍候再试…</string>
    <string name="exit">退出</string>
    <string name="login_username_hint">手机/邮箱/昵称</string>
    <string name="find_username_hint">登入账号</string>
    <string name="bind_email_hint">绑定过的邮箱</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="register">注 册</string>
    <string name="call_wait_hint">电话可能需要若干时间才能呼叫到相应节点，请耐心等待，不要挂机</string>
    <string name="register_dialog_msg">正在注册，请稍候…</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="pls_input_login_account">请输入登录账号!</string>
    <string name="pls_input_login_pwd">请输入登录密码!</string>
    <string name="login_dialog_msg">正在登录，请稍候…</string>
    <string name="login_choose_acount">请选择账号</string>
    <string name="company_ch">杭州恩牛网络技术有限公司</string>
    <string name="company_en">Hangzhou Enniu Tech Ltd.</string>
    <string name="title_app_name">51信用卡管家</string>
    <string name="title_talk_to_pm">对话产品经理</string>
    <string name="left_menu_home">首页</string>
    <string name="left_menu_email_bill">邮件账单</string>
    <string name="left_menu_sms_bill">短信账单</string>
    <string name="left_menu_email_bill_manual">转发账单</string>
    <string name="left_menu_hand_input">手输账单</string>
    <string name="left_menu_bill_list">消费明细</string>
    <string name="left_menu_bill_analyze">图表分析</string>
    <string name="left_menu_unsettled_bill">未出账单分期</string>
    <string name="left_menu_bank_service">银行服务</string>
    <string name="left_menu_prom_wall">品牌活动</string>
    <string name="left_menu_near_pref">附近优惠</string>
    <string name="left_menu_bank_activity">银行活动</string>
    <string name="left_menu_shop_search">店铺搜索</string>
    <string name="left_menu_my_fav">我的收藏</string>
    <string name="left_menu_talk">对话产品经理</string>
    <string name="left_menu_account">账户/注销</string>
    <string name="left_menu_setting">设置</string>
    <string name="left_menu_bill_import">导入账单</string>
    <string name="left_menu_other_channel">其他频道</string>
    <string name="left_menu_other">其他</string>
    <string name="ab_main_page">首页</string>
    <string name="menu_look">查看</string>
    <string name="menu_auxiliary">辅助</string>
    <string name="ab_menu_card_simple_view">简洁版视图</string>
    <string name="ab_menu_card_detail_view">明细版视图</string>
    <string name="ab_menu_sys_notice">系统通知</string>
    <string name="ab_menu_card_free_interest">刷卡免息</string>
    <string name="ab_menu_card_sigma">信用卡合计</string>
    <string name="ab_card_free_interest_ranklist">(排行)</string>
    <string name="import_scan">(扫描)</string>
    <string name="import_manual">(手动)</string>
    <string name="ab_menu_import_bill">导入账单</string>
    <string name="ab_menu_email_bill">邮件账单</string>
    <string name="ab_menu_sms_bill">短信账单</string>
    <string name="ab_menu_email_manual_bill">转发账单</string>
    <string name="ab_menu_hand_input_bill">手输账单</string>
    <string name="sd_import_bill" />
    <string name="sd_bill_list" />
    <string name="sd_bill_analyze" />
    <string name="sd_bank_service" />
    <string name="sd_near_youhui" />
    <string name="sd_bank_activity" />
    <string name="sd_shop_search" />
    <string name="sd_my_favorite" />
    <string name="lack_bill">缺账单</string>
    <string name="have_paied">已还清</string>
    <string name="not_need_pay">无需还</string>
    <string name="not_paid">未还</string>
    <string name="have_paid_part">已还部分</string>
    <string name="have_min_paid">已还最低</string>
    <string name="due_date">到 期</string>
    <string name="exceed_time_limit">逾 期</string>
    <string name="main_item_today_credit_card">今日刷卡：</string>
    <string name="main_item_credit_limit">信用额度：</string>
    <string name="main_item_return_state">还款状态：</string>
    <string name="main_item_last_payment">最后还款：</string>
    <string name="main_item_curr_consme">本期消费：</string>
    <string name="main_item_curr_debt">本期欠款</string>
    <string name="main_item_last_debt">上期欠款：</string>
    <string name="main_item_curr_debt_unknown">本期欠款 (未知)</string>
    <string name="main_item_min_payment">￥%1$s (最低还款)</string>
    <string name="free_interest_dialog_name_and_cardno">(%1$s %2$s)</string>
    <string name="unknown">未知</string>
    <string name="free_interest_days">免息%1$s天</string>
    <string name="bill_cycle_unknown">账单周期未知</string>
    <string name="credit_card_free_interest">刷卡免息</string>
    <string name="today_free_interest_rank">今日排行</string>
    <string name="stay_amount">待还金额：</string>
    <string name="dialog_credit_limit">额度：%1$s</string>
    <string name="dialog_avail_limit">可用：%1$s</string>
    <string name="month">月</string>
    <string name="card_number">卡号：</string>
    <string name="card_detail_need_pay">应还款金额：</string>
    <string name="card_detail_min_pay">最低还款额：</string>
    <string name="card_detail_card_interval">账单周期：</string>
    <string name="card_detail_credit_limit">综合信用额度：</string>
    <string name="card_detial_cash_limit">取现额度：</string>
    <string name="card_detial_cash_type">清算货币：</string>
    <string name="card_detail_integral">当前积分：</string>
    <string name="card_detial_last_need_pay">上期应还总额：</string>
    <string name="card_detial_current_coast">本期支出：</string>
    <string name="card_detial_current_income">本期收入：</string>
    <string name="card_detial_current_need_pay">本期应还总额：</string>
    <string name="card_detail_payment_due_date">最后还款日：</string>
    <string name="card_detail_mail">账单来源：</string>
    <string name="card_detail_has_paid">本期已还：</string>
    <string name="card_detail_remain_debt">剩余欠款：</string>
    <string name="card_detail_return_part_title">已还部分</string>
    <string name="card_detail_account_info">账户信息</string>
    <string name="card_detail_bill_detail_title">账单明细</string>
    <string name="card_detail_need_pay_title">应还总额</string>
    <string name="card_detail_unsettled_bill_title">未出账单</string>
    <string name="card_detail_title">%1$s账单</string>
    <string name="card_detail_name_on_bill">(%1$s %2$s)</string>
    <string name="card_detail_bill_empty">缺账单</string>
    <string name="card_detail_bill_daoqi">到 期</string>
    <string name="card_detail_out_of_date">已逾期</string>
    <string name="card_detail_has_paid_label">已还清</string>
    <string name="card_detail_not_need_pay">无需还</string>
    <string name="card_detail_pay_part_label">还部分</string>
    <string name="card_detail_unpaid_label">未还款</string>
    <string name="card_detail_min_pay_label">已还最低</string>
    <string name="card_detail_sms_alipay_hint">短信账单暂不支持还款，请导入邮件账单</string>
    <string name="card_detail_sms_detail_time">[%1$s] [%2$s]</string>
    <string name="card_detail_sms_scan_start">开始搜索短信</string>
    <string name="card_detail_sms_scan_complete">短信搜索完毕</string>
    <string name="import_manual_title">手动导入</string>
    <string name="import_manual_line1">如果您不选“自动”，也可以尝试“手动”导入。</string>
    <string name="import_manual_line2">导入方法：</string>
    <string name="import_manual_line3">把您或您家人的电子账单转发到您自己的“51邮箱”账号里，转发的账单数量不限。收到邮件后，系统自动帮你解析并提醒您按时还款。亲，只需一个APP就能管好您全家所有人的信用卡，从此以后，您就是家人永远的“依靠”。</string>
    <string name="import_manual_line4">我的“51账单”邮箱：</string>
    <string name="send_your_best_lover">发给最爱的TA</string>
    <string name="guide_line1">问：如何设置？</string>
    <string name="guide_line2">您可以直接打电话给银行信用卡中心，要求开设“电子账单”，按照客服要求，提供你自己的邮箱账号。</string>
    <string name="guide_line4">问：我的电子账单开设完成后怎么办？</string>
    <string name="guide_line6">设置完成后，一旦有新的账单到达或是有将要逾期的账单，系统都将及时提醒您。“账单逾期”不仅只是钱的问题，还涉及“银行信用”的问题，请及时 还款，珍惜您的“个人信用”。</string>
    <string name="guide_bank_tel">银行客服热线</string>
    <string name="import_manual_desc1">问：如果我的某封账单没解析出来怎么解决？</string>
    <string name="import_manual_desc2">第一步： 从您的邮箱里找出那封没解析成功的“银行电子帐单”。</string>
    <string name="import_manual_desc3">第二步： 手动“转发”到下面这个邮箱里。（这是您的51邮箱）</string>
    <string name="import_manual_desc4">第三步： 完成前2步后，等待解析结果的推送。</string>
    <string name="import_copy_mail_name">复制邮箱名</string>
    <string name="next_step">下一步</string>
    <string name="detail_more_history_bill">历史账单</string>
    <string name="detail_more_edit_credit_limit">编辑信用额度</string>
    <string name="detail_merge_bill">合并相连的账单</string>
    <string name="detail_more_delete_card">删除此信用卡</string>
    <string name="annual_fee_withhold_day">年费收取日：</string>
    <string name="annual_fee_withhold_day_hint">收取日期如：6月18日输入0618</string>
    <string name="annual_fee_card_count">年费获免刷卡次数</string>
    <string name="annual_fee_card_amount">免费获免刷卡金额</string>
    <string name="annual_fee_remark">备注：</string>
    <string name="annual_fee_save">保存</string>
    <string name="fee_free_count_hint">获免次数</string>
    <string name="fee_free_amount_hint">获免金额</string>
    <string name="annual_fee_remark_hint">请输入备注信息</string>
    <string name="annual_fee_hint">提示：如果不确定您信用卡年费获免方式，请拨打信用卡发卡银行咨询卡片年费获免方式及收取日期。如果刷卡次数与刷卡金额关联，请同时输入次数与金额</string>
    <string name="repayment_by_fuyou">富友还款</string>
    <string name="debt_card_card_no">借记卡卡号：</string>
    <string name="debt_card_username">真实姓名：</string>
    <string name="id_number">身份证号：</string>
    <string name="debt_phont_number">手机号：</string>
    <string name="credit_card_number">信用卡卡号：</string>
    <string name="repayment_amount">还款金额：</string>
    <string name="hint_input_phone_number">请输入您的手机号码</string>
    <string name="hint_input_id_number">请输入您的身份证号码</string>
    <string name="hint_input_user_name">请输入您的姓名</string>
    <string name="hint_input_credit_card_no">请输入信用卡卡号</string>
    <string name="hint_input_debt_card_no">请输入借记卡卡号</string>
    <string name="hint_input_repayment_amount">请输入还款金额</string>
    <string name="repayment_record">还款记录</string>
</resources>