<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/main_page_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.zhangdan.app">
    <include layout="@layout/layout_comm_title_only" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/annual_fee_withhold_day" android:singleLine="true" />
            <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/EditText_Fee_Withhold_Time" android:background="@drawable/edit_gray_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/annual_fee_withhold_day_hint" android:singleLine="true" android:maxLength="4" android:inputType="number" />
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/annual_fee_card_count" android:singleLine="true" />
            <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/EditText_Fee_Free_Card_Count" android:background="@drawable/edit_gray_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fee_free_count_hint" android:singleLine="true" android:inputType="number" />
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/annual_fee_card_amount" android:singleLine="true" />
            <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/EditText_Fee_Free_Card_Amount" android:background="@drawable/edit_gray_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fee_free_amount_hint" android:singleLine="true" android:maxLength="7" android:inputType="number" />
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/annual_fee_remark" android:singleLine="true" />
            <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/EditText_Fee_Free_Remark" android:background="@drawable/edit_gray_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/annual_fee_remark_hint" android:lines="2" android:singleLine="true" />
            <TextView android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/annual_fee_hint" />
            <Button android:textSize="18.0sp" android:textColor="#ff744a36" android:id="@id/Button_Bill_Submit" android:background="@drawable/btn_import_start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/annual_fee_save" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>