<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/main_page_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.zhangdan.app">
    <RelativeLayout android:id="@id/RelativeLayout_Ab_Title" android:background="@drawable/title_bar_blue" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/LinearLayout_Ab_Left_Indicator" android:background="@drawable/ab_item_bg" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/ImageView_Ab_Left_Indicator" android:background="@drawable/ab_left_indicator_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <ImageView android:background="@drawable/icon" android:layout_width="30.0dip" android:layout_height="30.0dip" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:id="@id/TextView_Ab_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/repayment_by_fuyou" />
        </LinearLayout>
        <Button android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:gravity="center" android:id="@id/Button_Repayment_Record" android:background="@drawable/ab_item_bg" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repayment_record" android:layout_alignTop="@id/LinearLayout_Ab_Left_Indicator" android:layout_alignBottom="@id/LinearLayout_Ab_Left_Indicator" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ScrollView android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/top_round_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/debt_card_username" />
                <EditText android:textSize="14.0sp" android:id="@id/EditText_Fuyou_UserName" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/hint_input_user_name" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/mid_round_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/credit_card_number" />
                <EditText android:textSize="14.0sp" android:id="@id/EditText_Fuyou_Caredit_Card_No" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/hint_input_credit_card_no" android:layout_weight="1.0" android:inputType="number" />
                <ImageView android:id="@id/ImageView_Pay_Choose_Credit_Card" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="fill_parent" android:src="@drawable/bill_stage_trangle_down" android:scaleType="center" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bottom_round_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/repayment_amount" />
                <com.zhangdan.app.widget.NumericEditText android:textSize="14.0sp" android:id="@id/EditText_Fuyou_Amount" android:background="@null" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/hint_input_repayment_amount" android:layout_weight="1.0" android:inputType="numberDecimal" app:integerCount="7" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/top_round_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/debt_card_card_no" />
                <EditText android:textSize="14.0sp" android:id="@id/EditText_Fuyou_Debt_Card_No" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/hint_input_debt_card_no" android:layout_weight="1.0" android:inputType="number" />
                <ImageView android:id="@id/ImageView_Pay_Choose_Debt_Card" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="fill_parent" android:src="@drawable/bill_stage_trangle_down" android:scaleType="center" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/mid_round_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/id_number" />
                <EditText android:textSize="14.0sp" android:id="@id/EditText_Fuyou_ID_Number" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/hint_input_id_number" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bottom_round_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/debt_phont_number" />
                <EditText android:textSize="14.0sp" android:id="@id/EditText_Fuyou_Phone_Number" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/hint_input_phone_number" android:inputType="phone" />
            </LinearLayout>
            <Button android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/Button_Fuyou_Submit" android:background="@drawable/btn_more_item_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/next_step" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>