<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView_Import_Guide" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout_Import_Guide" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/guide_line1" />
        <TextView android:textSize="12.0sp" android:textColor="#ff244153" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/guide_line2" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="12.0sp" android:textColor="#ff244153" android:id="@id/TextView_Guide_Line3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/guide_line4" />
        <TextView android:textSize="12.0sp" android:textColor="#ff253e52" android:id="@id/TextView_Guide_Line5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="12.0sp" android:textColor="#ffecfdff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/guide_line6" android:lineSpacingExtra="5.0dip" />
        <Button android:textSize="18.0sp" android:textColor="#ff244153" android:id="@id/Button_Import_Bank_Tel" android:background="@drawable/btn_import_start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/guide_bank_tel" />
    </LinearLayout>
</ScrollView>