<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/card_detail_more_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textColor="@color/card_detail_item_text_gray_color" android:id="@id/Button_Card_Detail_More_History_Bill" android:background="@drawable/btn_more_item_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:text="@string/detail_more_history_bill" />
    <Button android:textColor="@color/card_detail_item_text_gray_color" android:id="@id/Button_Card_Detail_More_Megre_Bill" android:background="@drawable/btn_more_item_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:text="@string/detail_merge_bill" />
    <Button android:textColor="@color/card_detail_item_text_gray_color" android:id="@id/Button_Card_Detail_More_Edit" android:background="@drawable/btn_more_item_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:text="@string/detail_more_edit_credit_limit" />
    <Button android:textColor="@color/color_white" android:id="@id/Button_Card_Detail_More_Delete_Bill" android:background="@drawable/btn_more_item_red" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="15.0dip" android:text="@string/detail_more_delete_card" />
</LinearLayout>