<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView_Import_Manual" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="@color/color_white" android:gravity="center_vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/import_manual_line1" />
        <ImageView android:background="@drawable/import_division_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="16.0sp" android:textColor="@color/color_white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/import_manual_line2" />
        <TextView android:textSize="12.0sp" android:textColor="#ff253e52" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/import_manual_line3" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="@color/color_white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/import_manual_line4" />
        <TextView android:textSize="20.0sp" android:textColor="#fff8e040" android:id="@id/TextView_Manual_Account" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="123@51zhangdan.com" />
        <ImageView android:background="@drawable/import_division_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="#fff6ffff" android:id="@id/TextView_Manual_Sms_Msg" android:background="@drawable/edittext_mail_unselected_bg" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
        <Button android:textSize="18.0sp" android:textColor="#ff244153" android:id="@id/Button_Manual_SendMsg" android:background="@drawable/btn_import_start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="10.0dip" android:text="@string/send_your_best_lover" />
    </LinearLayout>
</ScrollView>